hphp/hack/test/typecheck/strict_reference3.php.exp
File "strict_reference3.php", line 3, characters 20-21:
Don't use references! (Naming[2087])
